tests/snapshots/sfc/ts/patches__keep_alive_inside_v_for_should_use_builtin.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { resolveDynamicComponent as _resolveDynamicComponent, createVNode as _createVNode, openBlock as _openBlock, createBlock as _createBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, renderList as _renderList, KeepAlive as _KeepAlive } from "vue"

import { ref } from 'vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const tabs = ref([{ id: 1, component: 'TabA' }])

return (_ctx: any,_cache: any) => {
  return (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(tabs.value, (tab) => {
    return (_openBlock(), _createBlock(_KeepAlive, { key: tab.id }, [
      _createVNode(_resolveDynamicComponent(tab.component))
    ]))
  }), 128 /* KEYED_FRAGMENT */))
}
}

})
