tests/snapshots/sfc/ts/patches__nullable_runtime_prop_types_keep_null.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 198
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    activeKey: { type: [String, null], required: true },
    items: { type: [Array, null], required: true },
    groupName: { type: [String, null], required: true }
  },
  setup(__props: any) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div"))
}
}

})
