tests/snapshots/sfc/ts/patches__options_api_dynamic_style_and_class_keep_patch_flags.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { createElementVNode as _createElementVNode, normalizeStyle as _normalizeStyle, normalizeClass as _normalizeClass, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

const _hoisted_1 = { class: "map" }

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", _hoisted_1, [
    _createElementVNode("div", {
      style: _normalizeStyle(_ctx.knobStyle),
      class: _normalizeClass({ dragging: _ctx.dragging })
    }, null, 6 /* CLASS, STYLE */)
  ]))
}

const _sfc_main = {
  computed: {
    knobStyle() {
      return { transform: 'translate(10px, 20px)' }
    },
  },
}

_sfc_main.render = _sfc_render
export default _sfc_main
