tests/snapshots/sfc/ts/patches__ref_with_generic_type_should_be_stripped.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode } from "vue"

import { ref } from 'vue'

interface User {
  name: string
  age: number
}


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const user = ref<User | null>(null)
const users = ref<User[]>([])

return (_ctx: any,_cache: any) => {
  return (user.value)
    ? (_openBlock(), _createElementBlock("div", { key: 0 }, _toDisplayString(user.value.name), 1 /* TEXT */))
    : _createCommentVNode("v-if", true)
}
}

})
