tests/snapshots/sfc/ts/patches__scoped_style_does_not_bake_scope_attrs_into_render_props.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { resolveComponent as _resolveComponent, createElementVNode as _createElementVNode, createVNode as _createVNode, normalizeClass as _normalizeClass, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment } from "vue"

const marker = true

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {


return (_ctx: any,_cache: any) => {
  const _component_Test = _resolveComponent("Test")

  return (_openBlock(), _createElementBlock(_Fragment, null, [
    _createElementVNode("div", {
      class: _normalizeClass([])
    }, "Hoge"),
    _createVNode(_component_Test, { x: 1 })
  ], 64 /* STABLE_FRAGMENT */))
}
}

})
