tests/snapshots/sfc/ts/patches__setuplet_assignment_in_click_handler.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, unref as _unref, isRef as _isRef } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

let count = $ref(0)

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", {
    onClick: _cache[0] || (_cache[0] = ($event: any) => ((_isRef(count) ? count.value = _unref(count) + 1 : count = _unref(count) + 1)))
  }, _toDisplayString(_unref(count)), 1 /* TEXT */))
}
}

})
